Configure JVM args for testing.